<resources>
    <string name="app_name">LR-2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_s_my_fragment">It`s my fragment</string>
    <string name="my_fragment">My fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="new_activity">New Activity</string>
    <string name="new_tabbed_fragment">New tabbed fragment</string>
    <string name="go_to_main_activity">Go to main activity</string>
    <string name="list_tabbed">List tabbed</string>
    <string name="my_app">My App</string>
</resources>