<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NewFrafmentFromTabbed.ListFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_tabbed"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:numbersBackgroundColor="@color/design_default_color_error"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAlignment="textStart"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/my_fragment"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="10dp"/>



</LinearLayout>